# hdfs_best_hosts_caplugin

./: .gitignore  CMakeLists.txt  README.md
old_stuff/: compile.sh  setenv.sh
src/: CMakeLists.txt  hdfs_best_hosts.cc  hdfs_scheduler.cc  hdfs_scheduler.cc~  hdfs_scheduler_hold.cc  hdfs_scheduler_reserve.cc  host.h  output.txt  test_main.cc  test_main.cc~
